examples/errors/parsing/spec_take_annotated-empty-sort.cn
fun incP : Int -> Pred Int [spec] = {
  n -> return (n + 1)
}

fun f : Int -> Pred Int [spec] = {
  n ->
  take x : = incP n;
  return x
}

main : () [impure] = ()
